<resources>
    <string name="app_name">TODO List APP</string>
    <string name="things_to_do">Things ToDo</string>
    <string name="next_underlined"><u>next</u></string>
    <string name="logout_underlined"><u>Logout</u></string>
    <string name="sign_up_title">Create profile to start your first ToDo List</string>
    <string name="your_name">your name</string>
    <string name="your_email_address">your email address</string>
    <string name="create_your_profile">Create your profile</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login">Log In</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="do_not_have_account">Don\'t have an account?</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="lists_todo">Lists ToDo</string>
    <string name="search">Search</string>
    <string name="lists">Lists:</string>
    <string name="create_new_list">Create new list here</string>
    <string name="create">Create</string>
    <string name="task_name">Task name</string>
    <string name="list_name">List name</string>
    <string name="personal_list">Personal List</string>
    <string name="create_new_task">Create new task here</string>
    <string name="delete">Delete</string>
    <string name="auth_faild">Authentication failed.</string>
    <string name="field_required">Field required</string>
    <string name="cancel">Cancel</string>
    <string name="tasks">%1$d tasks</string>
    <string name="view_task">View task</string>
    <string name="edit">Edit</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="enter_email_to_reset_password">Enter your email to reset your password</string>
    <string name="reset_password">Reset password</string>
    <string name="result">Result</string>
    <string name="task_type">Task type</string>
</resources>