<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:orientation="vertical"
    android:paddingStart="32dp"
    android:paddingEnd="32dp"
    tools:context=".auth.ForgetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enter_email_to_reset_password"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_edittext_shape"
            android:hint="@string/your_email_address"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:background="@drawable/rounded_edittext_shape"
            android:backgroundTint="@color/orange"
            android:foreground="?selectableItemBackground"
            android:text="@string/reset_password"
            android:textColor="@color/white" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>