<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".list.ViewTaskActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/top_rounded_corner"
            android:orientation="vertical">

            <EditText
                android:id="@+id/task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/rounded_edittext_shape"
                android:backgroundTint="@color/gray2"
                android:gravity="start"
                android:hint="@string/task_name"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_edittext_shape"
                android:backgroundTint="@color/gray2"
                android:gravity="start"
                android:hint="@string/description"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:padding="4dp"
        android:text="@string/delete"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>