<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".list.ListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/list_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext_shape"
                android:drawableStart="@drawable/ic_baseline_search_24"
                android:drawablePadding="8dp"
                android:hint="@string/search"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="44dp"
                android:text="@string/lists"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/create_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/rounded_edittext_shape"
                android:drawableStart="@drawable/ic_baseline_add_24"
                android:drawablePadding="8dp"
                android:foreground="?selectableItemBackground"
                android:gravity="start|center"
                android:hint="@string/create_new_list"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/todo_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>